# mighty-engine

./: .coveragerc  .flake8  LICENSE  README.md  play.py  pyproject.toml  pyrightconfig.json  random_play.py  setup.py
mighty/: __init__.py  action.py  card.py  game.py
mighty/game/: __init__.py  common.py  extra.py  play.py  pledge.py
tests/: test_game.py  test_pledge.py  test_random_play.py
