[tool.poetry]
name = "mighty"
version = "1.0.1"
description = "Mighty card game engine"
authors = ["DongJin Shin <dongjin.shin.00@gmail.com>"]
license = "MIT"

readme = "README.md"
homepage = "https://github.com/dj-shin/mighty-engine"
repository = "https://github.com/dj-shin/mighty-engine"

[tool.poetry.dependencies]
python = "^3.6"
pytest = "^6.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
